# ntlib

./: .clang-format  .gitignore  CMakeLists.txt  CMakeListsGoogleBenchmark.txt  CMakeListsGoogleTest.txt  CMakePresets.json  DOCUMENTATION_MAIN.md  Doxyfile  LICENSE  README.md  annotated.html  base_8cpp.html  base_8cpp__incl.map  base_8cpp__incl.md5  binomial__coefficient_8cpp.html  binomial__coefficient_8cpp__incl.map  binomial__coefficient_8cpp__incl.md5  chinese__remainder_8cpp.html  chinese__remainder_8cpp__incl.map  chinese__remainder_8cpp__incl.md5  classes.html  classntlib_1_1algebra__traits.html  classntlib_1_1algebra__traits_3_01T_01_4-members.html  classntlib_1_1algebra__traits_3_01T_01_4.html  classntlib_1_1algebra__traits_3_01ct__mod__int_3_01T_00_01m_01_4_01_4-members.html  classntlib_1_1algebra__traits_3_01ct__mod__int_3_01T_00_01m_01_4_01_4.html  classntlib_1_1algebra__traits_3_01matrix_3_01ROWS_00_01COLUMNS_00_01T_01_4_01_4-members.html  classntlib_1_1algebra__traits_3_01matrix_3_01ROWS_00_01COLUMNS_00_01T_01_4_01_4.html  classntlib_1_1algebra__traits_3_01mod__int_3_01T_00_01m_01_4_01_4-members.html  classntlib_1_1algebra__traits_3_01mod__int_3_01T_00_01m_01_4_01_4.html  classntlib_1_1algebra__traits_3_01rational_3_01T_01_4_01_4-members.html  classntlib_1_1algebra__traits_3_01rational_3_01T_01_4_01_4.html  classntlib_1_1ct__mod__int-members.html  classntlib_1_1ct__mod__int.html  classntlib_1_1ct__mod__int__coll__graph.map  classntlib_1_1ct__mod__int__inherit__graph.md5  classntlib_1_1matrix-members.html  classntlib_1_1matrix.html  classntlib_1_1matrix_1_1reference-members.html  classntlib_1_1matrix_1_1reference.html  (+262 more)
benchmarks/: CMakeLists.txt  base.cpp  is_square.cpp  isqrt.cpp  odd_part.cpp  prime_decomposition.cpp  prime_generation.cpp  prime_test.cpp  sieve.cpp  sieve_235.cpp
benchmarks/experiments/: is_square.hpp  isqrt.hpp  odd_part.hpp  prime_decomposition.hpp  prime_generation.hpp  prime_test.hpp
docu/: annotated.html  base_8cpp.html  base_8cpp__incl.map  binomial__coefficient_8cpp.html  classntlib_1_1matrix.html  classntlib_1_1sieve__235_1_1reference-members.html  classntlib_1_1sieve__235_1_1reference.html  concepts.html  dir_000002_000001.html  dir_000002_000009.html  dir_000003_000002.html  dir_000007_000001.html  dir_000009_000001.html  dir_000011_000001.html  dir_03909c04a5a71df386ddfc3bda7bb77a.html  dir_03909c04a5a71df386ddfc3bda7bb77a_dep.map  dir_45cf89e4288d45db0d6c6306655121e5.html  dir_45cf89e4288d45db0d6c6306655121e5_dep.map  dir_6735c0f1e2d1517541a466d0171f9702.html  dir_683841fde2df4e01516757dad9864230.html  dir_683841fde2df4e01516757dad9864230_dep.md5  dir_868fffb828294a66a47b451f27831967.html  dir_db3f1e91c966809cc6d27dd2f335ffce.html  dir_db3f1e91c966809cc6d27dd2f335ffce_dep.map  dir_db3f1e91c966809cc6d27dd2f335ffce_dep.md5  dir_fa1cca46f684da0e0f2853cac5cf3ca2.html  dir_fa1cca46f684da0e0f2853cac5cf3ca2_dep.map  divisors_8cpp.html  divisors_8cpp__incl.map  divisors_8cpp__incl.md5  euler__totient_8cpp.html  euler__totient_8cpp__incl.map  files.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  index.html  md_README.html  module__continued__fraction.html  (+15 more)
include/: CMakeLists.txt  base.hpp  big_integer.hpp  big_unsigned.hpp  binomial_coefficient.hpp  chinese_remainder.hpp  continued_fraction.hpp  ct_mod_int.hpp  diophantine.hpp  divisor_function.hpp  divisors.hpp  euler_totient.hpp  int128.hpp  integral.hpp  lucas_sequence.hpp  matrix.hpp  mod_int.hpp  modulo.hpp  pell_equation.hpp  polygonal_number.hpp  prime_decomposition.hpp  prime_generation.hpp  prime_list.hpp  prime_test.hpp  pythagorean_triple.hpp  rational.hpp  sieve.hpp  sieve_235.hpp  sieve_eratosthenes.hpp  turan_number.hpp
lib/: CMakeLists.txt  base.cpp
modules/: CMakeLists.txt  base.cpp  binomial_coefficient.cpp  chinese_remainder.cpp  continued_fraction.cpp  diophantine.cpp  divisors.cpp  euler_totient.cpp  figurate_number.cpp  lucas_sequence.cpp  matrix.cpp  mod_int.cpp  modulo.cpp  pell_equation.cpp  polygonal_number.cpp  prime_decomposition.cpp  prime_generation.cpp  prime_test.cpp  pythagorean_triple.cpp  rational.cpp  turan_number.cpp
modules/arithmetic_functions/: CMakeLists.txt  divisors.cpp  euler_totient.cpp
modules/base/: CMakeLists.txt  base.cpp  concepts.cpp  int128.cpp  modulo.cpp
modules/chinese_remainder/: CMakeLists.txt  chinese_remainder.cpp
modules/combinatorics/: CMakeLists.txt  binomial_coefficient.cpp  figurate_number.cpp  pythagorean_triple.cpp  turan_number.cpp
modules/diophantine/: CMakeLists.txt  continued_fraction.cpp  diophantine.cpp  pell_equation.cpp
modules/modulo/: CMakeLists.txt  mod_int.cpp  modulo.cpp
modules/prime_decomposition/: CMakeLists.txt  prime_decomposition.cpp
modules/prime_generation/: CMakeLists.txt  prime_generation.cpp  sieve.cpp  sieve_235.cpp
modules/prime_test/: CMakeLists.txt  lucas_sequence.cpp  prime_test.cpp
modules/types/: CMakeLists.txt  matrix.cpp  mod_int.cpp  rational.cpp
projecteuler/: 005.cpp  007.cpp  009.cpp  010.cpp  012.cpp  015.cpp  021.cpp  023.cpp  027.cpp  039.cpp  041.cpp  045.cpp  046.cpp  047.cpp  064.cpp  066.cpp  069.cpp  072.cpp  094.cpp  094_pell.cpp  104.cpp  108.cpp  139.cpp  216.cpp  686.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  concepts_0.js  concepts_1.js  files_0.js  (+52 more)
test/: CMakeLists.txt  base.cpp  big_integer.cpp  big_unsigned.cpp  binomial_coefficient.cpp  chinese_remainder.cpp  ct_mod_int.cpp  diophantine.cpp  divisors.cpp  euler_totient.cpp  figurate_number.cpp  int128.cpp  lucas_sequence.cpp  matrix.cpp  mod_int.cpp  modulo.cpp  pell_equation.cpp  polygonal_number.cpp  prime_decomposition.cpp  prime_generation.cpp  prime_test.cpp  pythagorean_triple.cpp  rational.cpp  rt_mod_int.cpp  sieve.cpp  sieve_235.cpp  sieve_eratosthenes.cpp  turan_number.cpp
(+31 files in other folders)
